# kft-fraud_detection

./: .dockerignore  .env  .gitignore  ADMIN_UI_GUIDE.md  API_DOCUMENTATION.md  Dockerfile  ML_API_GUIDE.md  README.md  database.py  docker-compose.yml  init.sql  main.py  models.py  pyproject.toml  requirements.txt  run_seed.py  schemas.py  seed_data.py
.github/workflows/: ci.yml
config/: README.md
routers/: __init__.py  alert_router.py  case_router.py  identity_router.py  loan_router.py  ml_router.py  nid_router.py  rules_router.py  transaction_router.py  user_router.py
services/: alert_service.py  anomally_detector.py  case_service.py  fraud_orchestrator.py  identity_manager.py  loan_service.py  ml_fraud_detector.py  nid_service.py  rule_engine.py  tin_service.py  user_service.py
tests/: test_api.py  test_services.py
